fix serveral rubocop warnings

--- a/templates/app/views/chaltron/users/_form.html.erb
+++ b/templates/app/views/chaltron/users/_form.html.erb
@@ -3,7 +3,7 @@
   <% if context == :create %>
     <%= f.text_field :username %>
     <%= f.text_field :fullname %>
-    <%= f.email_field :email %>
+    <%= f.text_field :email %>
     <%= f.password_field :password %>
     <%= f.password_field :password_confirmation %>
     <%= f.role_select %>
