--- a/templates/app/views/chaltron/users/index.html.erb
+++ b/templates/app/views/chaltron/users/index.html.erb
@@ -8,11 +8,12 @@
       <% if ldap_enabled? and !Chaltron.ldap_allow_all %>
         <div class='dropdown pull-right'>
           <%= content_tag :button, type: 'button', class: 'btn btn-primary dropdown-toggle',
-            data: {toggle: 'dropdown'}, aria: {expanded: false, haspopup: true}, id: 'new_user_button' do %>
+                          data: { toggle: 'dropdown' }, aria: { expanded: false, haspopup: true },
+                          id: 'new_user_button' do %>
             <%= icon :fas, :plus, t('.new_user') %>
           <% end %>
 
-          <%= content_tag :div, class: 'dropdown-menu', aria: {labelledby: 'new_user_button'} do %>
+          <%= content_tag :div, class: 'dropdown-menu', aria: { labelledby: 'new_user_button' } do %>
             <%= link_to t('.new_ldap_user'), ldap_search_path, class: 'dropdown-item' %>
             <%= link_to t('.new_local_user'), new_user_path, class: 'dropdown-item' %>
           <% end %>
