fix beer icons in faq ;-)

--- a/templates/app/views/home/index.html.erb
+++ b/templates/app/views/home/index.html.erb
@@ -138,9 +138,7 @@
     }
     faqs << {
       question: 'This thing is fucking awesome! How can I repay?',
-      answer: 'A couple of beers is always fine for me!' \
-              "<i class='fa fa-beer'></i>" \
-              "<i class='fa fa-beer'></i>"
+      answer: 'A couple of beers is always fine for me! 🍺🍺'
     }
   %>
 
