fix chaltron-template link on github project

--- a/templates/app/views/home/index.html.erb
+++ b/templates/app/views/home/index.html.erb
@@ -129,7 +129,7 @@
       question: "It seems there is lack of documentation, isn't it? " \
                 'What am I supposed to do?',
       answer: 'You are supposed to write it on your own, I mean come ' \
-              "<a href='https://github.com/vicvega/chaltron/'>here</a> " \
+              "<a href='https://github.com/vicvega/chaltron-template'>here</a> " \
               ' and contribute'
     }
     faqs << {
@@ -137,7 +137,7 @@
       answer: 'No!'
     }
     faqs << {
-      question: 'This thing is fucking awesome! How can I repay?',
+      question: 'This is fucking awesome!! How can I repay?',
       answer: 'A couple of beers is always fine for me! 🍺🍺'
     }
   %>
