--- a/templates/app/views/chaltron/ldap/multi_create.html.erb
+++ b/templates/app/views/chaltron/ldap/multi_create.html.erb
@@ -13,7 +13,7 @@
         </ul>
       </div>
       <hr>
-      <%= link_to users_path, class: 'btn btn-primary' do %>
+      <%= link_to chaltron_users_path, class: 'btn btn-primary' do %>
         <%= icon :fas, 'arrow-left', t('chaltron.common.back') %>
       <% end %>
     </div>
