--- a/templates/app/views/chaltron/users/_side_filters.html.erb
+++ b/templates/app/views/chaltron/users/_side_filters.html.erb
@@ -1,19 +1,19 @@
 <% if ldap_enabled? %>
   <div class='list-group'>
-    <%= display_side_filter_link(users_path(filters: filters.merge(provider: nil).to_h),
-                                 filters[:provider].blank?, t('.provider.all'), User.count) %>
-    <%= display_side_filter_link(users_path(filters: filters.merge(provider: 'local').to_h),
+    <%= display_side_filter_link(chaltron_users_path(filters: filters.merge(provider: nil).to_h),
+                                 filters[:provider].blank?, t('.provider.all'), Chaltron::User.count) %>
+    <%= display_side_filter_link(chaltron_users_path(filters: filters.merge(provider: 'local').to_h),
                                  (filters[:provider] == 'local'), t('.provider.local'),
-                                 User.where(provider: nil).count) %>
-    <%= display_side_filter_link(users_path(filters: filters.merge(provider: 'ldap').to_h),
+                                 Chaltron::User.where(provider: nil).count) %>
+    <%= display_side_filter_link(chaltron_users_path(filters: filters.merge(provider: 'ldap').to_h),
                                  (filters[:provider] == 'ldap'), t('.provider.ldap'),
-                                 User.where(provider: 'ldap').count) %>
+                                 Chaltron::User.where(provider: 'ldap').count) %>
   </div>
 <% end %>
 <div class='list-group mt-4'>
-  <%= display_side_filter_link(users_path(filters: filters.merge(activity: 'no_login').to_h),
+  <%= display_side_filter_link(chaltron_users_path(filters: filters.merge(activity: 'no_login').to_h),
                                (filters[:activity] == 'no_login'), t('.activity.no_login'),
-                               User.where(sign_in_count: 0).count) %>
+                               Chaltron::User.where(sign_in_count: 0).count) %>
 </div>
 
 <fieldset class='mt-4'>
