--- a/templates/app/views/chaltron/users/self_edit.html.erb
+++ b/templates/app/views/chaltron/users/self_edit.html.erb
@@ -3,7 +3,7 @@
       <div class='col-md-12'>
         <h3 class='pt-4'><%= t('.title') %></h3>
 
-        <%= bootstrap_form_for(current_user, as: :user, url: self_update_users_path,
+        <%= bootstrap_form_for(current_user, as: :chaltron_user, url: self_update_chaltron_users_path,
           layout: :horizontal, label_col: 'col-sm-2', control_col: 'col-sm-10') do |f| %>
           <%= f.text_field :fullname %>
           <% if current_user.provider.nil? %>
@@ -21,7 +21,7 @@
             <div class='col-sm-2'></div>
             <div class='col-sm-10'>
               <%= f.submit t('.submit'), class: 'btn btn-primary' %>
-              <%= link_to self_show_users_path, class: 'btn btn-link pull-right' do %>
+              <%= link_to self_show_chaltron_users_path, class: 'btn btn-link pull-right' do %>
                 <%= icon :fas, :times, t('chaltron.common.cancel') %>
               <% end %>
             </div>
