--- a/templates/app/views/chaltron/ldap/multi_new.html.erb
+++ b/templates/app/views/chaltron/ldap/multi_new.html.erb
@@ -1,15 +1,13 @@
 <div class='container-fluid'>
   <h3 class='pt-4'><%= t('.title') %></h3>
 
-    <%= content_tag :p, t('.par') %>
-
+    <%= tag.p t('.par') %>
     <%= bootstrap_form_for(Chaltron::User.new, url: chaltron_ldap_multi_create_path, method: :post,
-                                     layout: :horizontal, html: { id: 'ldap_create' }) do |f| %>
-
+                                               layout: :horizontal, html: { id: 'ldap_create' }) do |f| %>
       <div class='form-group row'>
         <div class='col-sm-2'></div>
         <div class='col-sm-10'>
-          <%= content_tag 'table', id: 'ldap_create', class: 'table table-striped table-sm' do %>
+          <%= tag.table(id: 'ldap_create', class: 'table table-striped table-sm') do %>
             <thead>
               <tr>
                 <th class='checkbox'>
@@ -44,8 +42,7 @@
           <%= f.submit t('.submit_text'), id: 'ldap_create_button',
                                           class: 'btn btn-primary',
                                           disabled: true %>
-          <%= back_link class: 'btn btn-default pull-right',
-            text: t('chaltron.common.cancel'), icon: 'times' %>
+          <%= back_link class: 'btn btn-default pull-right', text: t('chaltron.common.cancel'), icon: 'times' %>
         </div>
       </div>
 
