--- a/templates/app/views/chaltron/users/show.html.erb
+++ b/templates/app/views/chaltron/users/show.html.erb
@@ -26,8 +26,7 @@
           <% end %>
           <li class='list-group-item'>
             <span><%= Chaltron::User.human_attribute_name(:roles) %>: </span>
-            <%= safe_join(@user.roles.map { |x| content_tag(:span, t("roles.#{x.name}"), class: 'badge badge-primary')},
-                          ' ') %>
+            <%= safe_join(@user.roles.map { |x| tag.span(t("roles.#{x.name}"), class: 'badge badge-primary') }, ' ') %>
           </li>
         </ul>
       </div>
@@ -50,7 +49,7 @@
           <% unless @user.last_sign_in_ip.nil? %>
             <li class='list-group-item'>
               <span><%= Chaltron::User.human_attribute_name(:last_sign_in_ip) %>: </span>
-              <strong><%= @user.last_sign_in_ip%> </strong>
+              <strong><%= @user.last_sign_in_ip %> </strong>
             </li>
           <% end %>
         </ul>
@@ -65,10 +64,8 @@
   <% end %>
 
   <div class='float-right'>
-    <%
-      danger = %w[ btn btn-danger ]
-      danger << 'disabled' if @user == current_user
-    %>
+    <% danger = %w[btn btn-danger]
+       danger << 'disabled' if @user == current_user %>
     <% if can? :edit, @user %>
       <%= link_to edit_chaltron_user_path(@user), class: 'btn btn-primary' do %>
         <%= icon :fas, :edit, t('.edit') %>
@@ -83,9 +80,8 @@
         <% end %>
       <% end %>
     <% end %>
-    <%= link_to @user, method: :delete, class: danger,
-      data: { confirm: t('.destroy_confirm', user: @user.username) } do %>
+    <%= link_to @user, method: :delete, class: danger, data: { confirm: t('.destroy_confirm', user: @user.username) } do %>
       <%= icon :fas, :trash, t('.destroy') %>
-    <% end if can? :destroy, @user%>
+    <% end if can? :destroy, @user %>
   </div>
 </div>
