--- a/templates/app/views/home/test.html.erb
+++ b/templates/app/views/home/test.html.erb
@@ -1,17 +1,19 @@
-<div class='jumbotron'>
-  <div class='container-fluid'>
-    <h1>Test #<%= @test %></h1>
-    <p>
-      Chaltron uses <%= link_to 'simple-navigation',
-      'https://github.com/codeplant/simple-navigation' %>
-      to build navbar menu.
-    </p>
-    <p>
-      Edit <code>config/navigation.rb</code> to setup your own navbar
-    </p>
-    <p>
-      <%= link_to 'Learn more', 'https://github.com/codeplant/simple-navigation',
-        class: 'btn btn-primary btn-lg' %>
-    </p>
+<div class='container py-4'>
+  <div class='p-5 mb-4 bg-light rounded-3'>
+    <div class='container-fluid py-5'>
+      <h1 class= 'display-5 fw-bold'>Test #<%= @test %></h1>
+      <p class='fs-4'>
+        Chaltron uses <%= link_to 'simple-navigation',
+        'https://github.com/codeplant/simple-navigation' %>
+        to build navbar menu.
+      </p>
+      <p class='fs-4'>
+        Edit <code>config/navigation.rb</code> to setup your own navbar
+      </p>
+      <p class='fs-4'>
+        <%= link_to 'Learn more', 'https://github.com/codeplant/simple-navigation',
+          class: 'btn btn-primary btn-lg' %>
+      </p>
+    </div>
   </div>
 </div>
