--- a/templates/app/views/home/_faq.html.erb
+++ b/templates/app/views/home/_faq.html.erb
@@ -1,13 +1,13 @@
-<div class='card'>
-  <%= content_tag :div, id: "heading#{faq_counter}", class: 'card-header', role: 'tab' do %>
-    <h5 class='mb-0'>
-      <%= link_to raw(faq[:question]), "#collapse#{faq_counter}", data: { toggle: 'collapse' },
-        role: 'button', aria: { expanded: false, controls: "collapse#{faq_counter}"} , class: 'collapsed' %>
-    </h5>
+<div class='accordion-item'>
+  <%= tag.h2 id: "heading#{faq_counter}", class: 'accordion-header' do %>
+    <%= button_tag raw(faq[:question]), class: 'accordion-button collapsed',
+                    type: 'button',
+                    data: {'bs-target' => "#collapse#{faq_counter}", 'bs-toggle' => 'collapse'},
+                    aria: { expanded: false, controls: "collapse#{faq_counter}"} %>
   <% end %>
-  <%= content_tag :div, id: "collapse#{faq_counter}", class: 'collapse', role: 'tabpanel',
-    data: { parent: '#accordion' }, aria: { labelledby: "heading#{faq_counter}" } do %>
-    <div class="card-body">
+  <%= tag.div id: "collapse#{faq_counter}", class: 'accordion-collapse collapse',
+    data: { 'bs-parent' => '#accordion' }, aria: { labelledby: "heading#{faq_counter}" } do %>
+    <div class="accordion-body">
       <%= raw faq[:answer] %>
     </div>
   <% end %>
