--- a/templates/app/views/layouts/application.html.erb.tt
+++ b/templates/app/views/layouts/application.html.erb.tt
@@ -12,7 +12,7 @@
   <%%= tag.body data: { locale: I18n.locale } do %>
       <%%= render 'layouts/navbar' %>
       <%%= render 'layouts/flash' %>
-      <div id='content'>
+      <div id='content' class='my-5'>
         <%%= yield %>
       </div>
       <%%= render 'layouts/footer' %>
