--- a/templates/app/views/home/_carousel.html.erb
+++ b/templates/app/views/home/_carousel.html.erb
@@ -8,20 +8,20 @@
 
   <div class='carousel-inner'>
     <div class='carousel-item active'>
-      <%= image_tag('slide1.gif', class: 'd-block w-100') %>
+      <%= image_tag('slide1.gif', class: 'd-block w-100 rounded-3') %>
       <div class='carousel-caption d-none d-md-block'>
         <h1>Chaltron rulez!</h1>
       </div>
     </div>
     <div class='carousel-item'>
-      <%= image_tag('slide2.gif', class: 'd-block w-100') %>
+      <%= image_tag('slide2.gif', class: 'd-block w-100 rounded-3') %>
       <div class='carousel-caption d-none d-md-block'>
         <h1>Wow!</h1>
         <p>Looking good</p>
       </div>
     </div>
     <div class='carousel-item'>
-      <%= image_tag('slide3.gif', class: 'd-block w-100') %>
+      <%= image_tag('slide3.gif', class: 'd-block w-100 rounded-3') %>
       <div class='carousel-caption d-none d-md-block'>
         <h1>Not bad!</h1>
       </div>
