--- a/templates/app/views/chaltron/users/_form.html.erb
+++ b/templates/app/views/chaltron/users/_form.html.erb
@@ -1,12 +1,13 @@
-<%= bootstrap_form_for(@user, layout: :horizontal, label_col: 'col-sm-2', control_col: 'col-sm-10') do |f| %>
+<%= simple_form_for @user, wrapper: :horizontal_form do |f| %>
 
   <% if context == :create %>
-    <%= f.text_field :username %>
-    <%= f.text_field :fullname %>
-    <%= f.text_field :email %>
-    <%= f.password_field :password %>
-    <%= f.password_field :password_confirmation %>
-    <%= f.role_select %>
+    <%= f.input :username %>
+    <%= f.input :fullname %>
+    <%= f.input :email, required: true %>
+    <%= f.input :password, required: true %>
+    <%= f.input :password_confirmation, required: true %>
+    <%= f.input :role_ids, as: :check_boxes, wrapper: :horizontal_collection_inline,
+                           collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id]}  %>
   <% elsif context == :update %>
     <% if current_user == @user %>
       <%= f.role_select disabled: 'user_admin' %>
@@ -15,11 +16,10 @@
     <% end %>
   <% end %>
 
-  <div class='form-group row'>
-    <div class='col-sm-2'></div>
-    <div class='col-sm-10'>
+  <div class='row mb-3'>
+    <div class='col-sm-9 offset-sm-3'>
       <%= f.submit submit_text, class: 'btn btn-primary' %>
-      <%= back_link class: 'btn btn-link pull-right', text: t('.cancel_text'), icon: 'times' %>
+      <%= back_link class: 'btn btn-light', text: t('.cancel_text'), icon: 'times' %>
     </div>
   </div>
 
