fix local user page

--- a/templates/app/views/chaltron/users/show.html.erb
+++ b/templates/app/views/chaltron/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'><%= @user.display_name %></h3>
+  <h3><%= @user.display_name %></h3>
   <div class='row'>
 
     <div class='col-md-9'>
