--- a/templates/app/views/chaltron/users/_form.html.erb
+++ b/templates/app/views/chaltron/users/_form.html.erb
@@ -10,9 +10,12 @@
                            collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] } %>
   <% elsif context == :update %>
     <% if current_user == @user %>
-      <%= f.role_select disabled: 'user_admin' %>
+      <%= f.input :role_ids, as: :check_boxes, wrapper: :horizontal_collection_inline,
+                             collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] },
+                             disabled: Chaltron::Role.where(name: 'user_admin').map(&:id) %>
     <% else %>
-      <%= f.role_select %>
+      <%= f.input :role_ids, as: :check_boxes, wrapper: :horizontal_collection_inline,
+                             collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] } %>
     <% end %>
   <% end %>
 
