--- a/templates/app/views/chaltron/users/_form.html.erb
+++ b/templates/app/views/chaltron/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @user, wrapper: :horizontal_form do |f| %>
+<%= simple_form_for @user do |f| %>
 
   <% if context == :create %>
     <%= f.input :username %>
