--- a/templates/app/views/devise/passwords/new.html.erb
+++ b/templates/app/views/devise/passwords/new.html.erb
@@ -2,8 +2,7 @@
   <h2><%= t '.title' %></h2>
   <div class='card'>
     <div class='card-body'>
-      <%= simple_form_for resource, as: resource_name, url: password_path(resource_name),
-                              wrapper: :horizontal_form do |f| %>
+      <%= simple_form_for resource, as: resource_name, url: password_path(resource_name) do |f| %>
         <p><%= t '.par1' %></p>
         <%= f.input :email, autofocus: true %>
         <div class='row mb-3'>
