--- a/templates/app/views/chaltron/users/self_show.html.erb
+++ b/templates/app/views/chaltron/users/self_show.html.erb
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'><%= t '.title' %></h3>
+  <h3><%= t '.title' %></h3>
   <div class='row'>
 
     <div class='col-md-9'>
