--- a/templates/app/views/devise/passwords/edit.html.erb
+++ b/templates/app/views/devise/passwords/edit.html.erb
@@ -4,6 +4,7 @@
     <div class='card-body'>
       <%= simple_form_for resource, as: resource_name, url: password_path(resource_name),
                                     html: { method: :put } do |f| %>
+        <%= f.error_notification %>
         <%= f.input :reset_password_token, as: :hidden %>
         <%= f.input :password, autofocus: true %>
         <%= f.input :password_confirmation %>
