--- a/templates/app/views/devise/passwords/new.html.erb
+++ b/templates/app/views/devise/passwords/new.html.erb
@@ -3,6 +3,7 @@
   <div class='card'>
     <div class='card-body'>
       <%= simple_form_for resource, as: resource_name, url: password_path(resource_name) do |f| %>
+        <%= f.error_notification %>
         <p><%= t '.par1' %></p>
         <%= f.input :email, autofocus: true %>
         <div class='row mb-3'>
