--- a/templates/app/views/chaltron/ldap/multi_new.html.erb
+++ b/templates/app/views/chaltron/ldap/multi_new.html.erb
@@ -1,50 +1,42 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'><%= t('.title') %></h3>
+  <h3><%= t('.title') %></h3>
+    <%= tag.p t('.par'), class: 'm-0' %>
+    <%= simple_form_for(Chaltron::User.new, url: chaltron_ldap_multi_create_path,
+                                            html: { id: 'ldap_create' }) do |f| %>
+      <div class='mb-3'>
+      <%= tag.table(id: 'ldap_create', class: 'table table-striped table-sm') do %>
+        <thead>
+          <tr>
+            <th class='checkbox'>
+              <%= custom_checkbox(id: 'entry-check-all', class: 'entry') %>
+            </th>
+            <th class='username'>
+              <%= Chaltron::User.human_attribute_name(:username) %>
+            </th>
+            <th class='fullname'>
+              <%= Chaltron::User.human_attribute_name(:fullname) %>
+            </th>
+            <th class='email'>
+              <%= Chaltron::User.human_attribute_name(:email) %>
+            </th>
+            <th class='department'>
+              <%= Chaltron::User.human_attribute_name(:department) %>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render partial: 'entry', collection: @entries %>
+        </tbody>
+      <% end %>
 
-    <%= tag.p t('.par') %>
-    <%= bootstrap_form_for(Chaltron::User.new, url: chaltron_ldap_multi_create_path, method: :post,
-                                               layout: :horizontal, html: { id: 'ldap_create' }) do |f| %>
-      <div class='form-group row'>
-        <div class='col-sm-2'></div>
-        <div class='col-sm-10'>
-          <%= tag.table(id: 'ldap_create', class: 'table table-striped table-sm') do %>
-            <thead>
-              <tr>
-                <th class='checkbox'>
-                  <%= custom_checkbox(id: 'entry-check-all', class: 'entry') %>
-                </th>
-                <th class='username'>
-                  <%= Chaltron::User.human_attribute_name(:username) %>
-                </th>
-                <th class='fullname'>
-                  <%= Chaltron::User.human_attribute_name(:fullname) %>
-                </th>
-                <th class='email'>
-                  <%= Chaltron::User.human_attribute_name(:email) %>
-                </th>
-                <th class='department'>
-                  <%= Chaltron::User.human_attribute_name(:department) %>
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= render partial: 'entry', collection: @entries %>
-            </tbody>
-          <% end %>
-        </div>
-      </div>
+      <%= f.input :role_ids, as: :check_boxes, wrapper: :vertical_collection_inline,
+                             collection: Chaltron::Role.all.map { |r| [I18n.t("chaltron/roles.#{r.name}"), r.id] },
+                             label_class: 'col-sm-2 col-form-label' %>
 
-      <%= f.role_select %>
-
-      <div class='form-group row'>
-        <div class='col-sm-2'></div>
-        <div class='col-sm-10'>
-          <%= f.submit t('.submit_text'), id: 'ldap_create_button',
-                                          class: 'btn btn-primary',
-                                          disabled: true %>
-          <%= back_link class: 'btn btn-default pull-right', text: t('chaltron.common.cancel'), icon: 'times' %>
-        </div>
-      </div>
+      <%= f.submit t('.submit_text'), id: 'ldap_create_button',
+                                      class: 'btn btn-primary',
+                                      disabled: true %>
+      <%= back_link class: 'btn btn-light', text: t('chaltron.common.cancel'), icon: 'times' %>
 
     <% end %>
 </div>
