--- a/templates/app/views/chaltron/ldap/search.html.erb
+++ b/templates/app/views/chaltron/ldap/search.html.erb
@@ -1,23 +1,36 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'><%= t('.title') %></h3>
+  <h3><%= t('.title') %></h3>
 
-  <%= bootstrap_form_tag(url: chaltron_ldap_multi_new_path, method: :post, layout: :horizontal,
-                         label_col: 'col-sm-2', control_col: 'col-sm-10') do |f| %>
+  <%= form_tag chaltron_ldap_multi_new_path do |f| %>
 
-    <%= f.text_field :userid, label: t('.name_label'), help: t('.name_help') %>
-    <%= f.text_field :lastname, label: t('.lastname_label'), help: t('.lastname_help') %>
-    <%= f.text_field :department, label: t('.department_label'), help: t('.department_help') %>
-    <%= f.text_field :limit, label: t('.limit_label'), help: t('.limit_help'), value: @limit %>
-
-    <div class='form-group row'>
-      <div class='col-sm-2'></div>
-      <div class='col-sm-10'>
-        <%= submit_tag t('.submit_text'), class: 'btn btn-primary' %>
-        <%= link_to chaltron_users_path, class: 'btn btn-link pull-right' do %>
-          <%= icon :fas, :times, t('chaltron.common.cancel') %>
-        <% end %>
-      </div>
+    <div class='mb-3'>
+      <%= label_tag :userid, t('.name_label'), class: 'col-sm-2 col-form-label' %>
+      <%= tag.input id: :userid, type: :text, name: :userid, class: 'form-control' %>
+      <%= content_tag :div, t('.name_help'), class: 'form-text' %>
     </div>
+
+    <div class='mb-3'>
+      <%= label_tag :lastname, t('.lastname_label'), class: 'col-sm-2 col-form-label' %>
+      <%= tag.input id: :lastname, type: :text, name: :lastname, class: 'form-control' %>
+      <%= content_tag :div, t('.lastname_help'), class: 'form-text' %>
+    </div>
+
+    <div class='mb-3'>
+      <%= label_tag :department, t('.department_label'), class: 'col-sm-2 col-form-label' %>
+      <%= tag.input id: :department, type: :text, name: :department, class: 'form-control' %>
+      <%= content_tag :div, t('.department_help'), class: 'form-text' %>
+    </div>
+
+    <div class='mb-3'>
+      <%= label_tag :limit, t('.limit_label'), class: 'col-sm-2 col-form-label' %>
+      <%= tag.input id: :limit, type: :text, name: :limit, class: 'form-control' %>
+      <%= content_tag :div, t('.limit_help'), class: 'form-text' %>
+    </div>
+
+    <%= submit_tag t('.submit_text'), class: 'btn btn-primary' %>
+    <%= link_to chaltron_users_path, class: 'btn btn-ligth' do %>
+      <%= icon :fas, :times, t('chaltron.common.cancel') %>
+    <% end %>
   <% end %>
 
 </div>
