--- a/templates/lib/templates/erb/scaffold/_form.html.erb
+++ b/templates/lib/templates/erb/scaffold/_form.html.erb
@@ -1,21 +1,15 @@
-<%%= bootstrap_form_with(model: @<%= singular_table_name %>, local: true, layout: :horizontal, label_col: 'col-sm-2 col-form-label', control_col: 'col-sm-10') do |f| %>
+<%%= simple_form_for @<%= singular_table_name %> do |f| %>
+  <%%= f.error_notification %>
+  <%%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<% attributes.each do |attribute| -%>
-<% if attribute.field_type == :check_box -%>
-  <%%= f.form_group :<%= attribute.name %>, label: { text: '<%= attribute.name %>' } do %>
-    <%%= f.<%= attribute.field_type %> :<%= attribute.name %>, label: '' %>
-  <%% end -%>
-<% else -%>
-  <%%= f.<%= attribute.field_type %> :<%= attribute.name %> %>
-<% end -%>
-<% end -%>
-
-  <div class='form-group row'>
-    <div class='col-sm-2'></div>
-    <div class='col-sm-10'>
-      <%%= f.submit 'Submit', class: 'btn btn-primary' %>
-      <%%= back_link class: 'btn btn-default pull-right' %>
-    </div>
+  <div class='form-inputs'>
+  <%- attributes.each do |attribute| -%>
+    <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
+  <%- end -%>
   </div>
 
+  <div class='form-actions'>
+    <%%= f.button :submit, class: 'btn btn-primary' %>
+    <%%= back_link class: 'btn btn-light', text: 'Cancel', icon: 'times' %>
+  </div>
 <%% end %>
