--- a/templates/lib/templates/erb/scaffold/index.html.erb
+++ b/templates/lib/templates/erb/scaffold/index.html.erb
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'><%= plural_table_name.titleize %></h3>
+  <h3><%= plural_table_name.titleize %></h3>
   <%%= content_tag 'table', class: 'table table-striped datatable' do %>
     <thead>
       <tr><% attributes.each do |attribute| %>
