--- a/templates/lib/templates/erb/scaffold/new.html.erb
+++ b/templates/lib/templates/erb/scaffold/new.html.erb
@@ -1,4 +1,4 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'>New <%= singular_table_name %></h3>
+  <h3>New <%= singular_table_name %></h3>
   <%%= render 'form' %>
 </div>
