--- a/templates/lib/templates/erb/scaffold/show.html.erb
+++ b/templates/lib/templates/erb/scaffold/show.html.erb
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-  <h3 class='pt-4'>Show <%= singular_table_name %></h3>
+  <h3>Show <%= singular_table_name %></h3>
   <div class='row'>
 
     <div class='col-md-3'>
