--- a/templates/app/views/home/test.html.erb
+++ b/templates/app/views/home/test.html.erb
@@ -1,4 +1,4 @@
-<div class='container py-4'>
+<div class='container'>
   <div class='p-5 mb-4 bg-light rounded-3'>
     <div class='container-fluid py-5'>
       <h1 class= 'display-5 fw-bold'>Test #<%= @test %></h1>
