refactor getting rid of almost all js

--- a/templates/app/assets/stylesheets/chaltron.scss
+++ b/templates/app/assets/stylesheets/chaltron.scss
@@ -1,7 +1,3 @@
-/**
- * Flash messages
- *
- */
 .flash-container {
   cursor: pointer;
   margin: 0;
@@ -14,5 +10,26 @@
 
   .alert {
     margin: 0;
+  }
+}
+
+#login-box {
+  max-width: 300px;
+  input#username, input#user_login {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  input#password, input#user_password {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+}
+
+#navbar-top {
+  padding-top: 0;
+  padding-bottom: 0;
+  .dropdown-menu {
+    margin-top: 0;
   }
 }
