--- a/templates/app/views/layouts/_footer.html.erb
+++ b/templates/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <nav class='navbar fixed-bottom navbar-dark bg-dark py-0'>
-  <div class="container-fluid">
+  <div class='container-fluid'>
     <%= tag.div class: 'navbar-text' do %>
       <%= icon(:fab, :github) %>
       Created with
